<resources>
    <string name="app_name">antifragile</string>
    <string name="bottom_nav_calendar">감정일기</string>
    <string name="bottom_nav_emotion">내 감정</string>
    <string name="bottom_nav_content">내 콘텐츠</string>
    <string name="bottom_nav_my_page">마이페이지</string>
    <string name="add_diary">일기 추가</string>
    <string name="antirfagile_logo">antirfagile 로고</string>
    <string name="naver_login">네이버</string>
    <string name="kakao_login">카카오톡</string>
    <string name="google_login">구글</string>
    <string name="app_description">맞춤형 멘탈 케어 서비스</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="not_written_diary">오늘 일기를 아직 안썼어요!</string>
    <string name="create_diary">일기를 작성해주세요</string>
    <string name="move_to_create_diary">감정일기 쓰러가기</string>
    <string name="edit_box_hint">입력해주세요</string>
    <string name="text_diary_tip">∙  어떤 일이 있었나요?\n∙  그때의 감정은 어땠나요?\n∙  그때 들었던 생각이 무엇인가요?\n∙  그때 취했던 행동이 무엇인가요?</string>
    <string name="text_diary_tip_title">일기에 다음 내용을 작성하면 좋아요!</string>
    <string name="text_diary_point">감정 일기를 작성하면 3포인트를 획득합니다!</string>
    <!-- TODO: 포인트 획득 문구로 변경하기 -->
    <string name="get_point_message">일기 작성을 완료했습니다!</string>
    <string name="recommend_emotion">일기에 어울리는\n감정티콘을 골라봤어요!</string>
    <string name="select_diary_type">오늘 작성할\n일기 방식을 선택해주세요!</string>
    <string name="move_to_content">추천 콘텐츠 보러가기</string>
    <string name="my_emotion_chart">나의 감정차트</string>
    <string name="question_mark">\?</string>
    <string name="today_my_emotion">오늘 나의 감정</string>
    <string name="edit_complete">작성 완료</string>
    <string name="select_emoticon">마음에 들어요</string>
    <string name="choose_self">직접 고를게요</string>
    <string name="select_complete">선택 완료</string>
    <string name="behavior_emoticon_expand">com.example.myapp.EmoticonExpandBehavior</string>
    <string name="select_emoticon_emotion">일기에 어울리는\n감정티콘을 골라주세요!</string>
    <string name="loading">Loading...</string>
    <string name="feedback_hint">입력하기</string>
    <string name="save">저장</string>
    <string name="no_content">영상이 유효하지 않거나 삭제되었습니다.</string>
    <string name="view_complete">콘텐츠 시청을 완료했습니다!</string>
    <string name="re_recommend">영상 재추천 받기</string>
    <string name="move_to_select_content">영상 선택 화면으로 돌아가기</string>
    <string name="move_to_diary">감정 일기로 돌아가기</string>
    <string name="share">공유</string>
    <string name="btn_view_complete">시청 완료</string>
    <string name="video_thumbnail_desc">video Thumbnail</string>
    <string name="complete_terms">시작하기</string>
    <string name="profile_image_setting">프로필 이미지 설정</string>
    <string name="input_nickname">닉네임 입력</string>
    <string name="input_email">이메일 입력</string>
    <string name="duplicate_check">중복확인</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="exmaple_birthday">2000.01.01</string>
    <string name="birthday">생년월일</string>
    <string name="input_job">직업 입력</string>
    <string name="job">직업</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="sign_up">회원가입</string>
    <string name="title_modify_password">비밀번호 변경</string>
    <string name="cur_password">현재 비밀번호</string>
    <string name="input_cur_password">현재 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="input_new_password">새로운 비밀번호</string>
    <string name="save_modify_password">비밀번호 변경하기</string>
    <string name="modify_password"><u>비밀번호 변경</u></string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="withdraw"><u>계정탈퇴</u></string>
    <string name="service_term"><u>(필수) Antifragile 서비스 이용 약관 동의</u></string>
    <string name="privacy_term"><u>(필수) 개인정보 수집 및 이용 동의</u></string>
    <string name="marketing_term"><u>(선택) 마케팅 정보 수신 동의</u></string>
    <string name="diary_term"><u>(선택) 감정 일기 정보 수집 동의</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary_total_num_format">%1$d 일</string>
    <string name="no_member">아직 회원이 아니신가요?</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력해주세요.</string>
    <string name="id">아이디</string>
    <string name="input_id">아이디를 입력해주세요.</string>
</resources>