<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/nav_calendar_selector"
        android:title="@string/bottom_nav_calendar" />

    <item
        android:id="@+id/nav_emotion"
        android:title="@string/bottom_nav_emotion"
        android:icon="@drawable/nav_emotion_selector" />
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/nav_content"
        android:title="@string/bottom_nav_content"
        android:icon="@drawable/nav_content_selector" />

    <item
        android:id="@+id/nav_my_page"
        android:title="@string/bottom_nav_my_page"
        android:icon="@drawable/nav_mypage_selector" />

</menu>