<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/antirfagile_logo"
            android:contentDescription="@string/antirfagile_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/lo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google_login"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/google_login" />

            <ImageButton
                android:id="@+id/btn_kakao_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/kakao_login"
                android:contentDescription="@string/kakao_login" />

            <ImageButton
                android:id="@+id/btn_naver_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/naver_login"
                android:contentDescription="@string/naver_login" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>