<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:id="@+id/lo_calendar_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_previous_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_month_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2024.07"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_next_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_calendar_weekdays"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingHorizontal="16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/lo_calendar_header">

            <TextView
                android:id="@+id/tv_sunday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_monday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_sunday"
                app:layout_constraintRight_toLeftOf="@id/tv_tuesday"/>

            <TextView
                android:id="@+id/tv_tuesday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_monday"
                app:layout_constraintRight_toLeftOf="@id/tv_wednesday"/>

            <TextView
                android:id="@+id/tv_wednesday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
                app:layout_constraintRight_toLeftOf="@id/tv_thursday"/>

            <TextView
                android:id="@+id/tv_thursday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
                app:layout_constraintRight_toLeftOf="@id/tv_friday"/>

            <TextView
                android:id="@+id/tv_friday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_thursday"
                app:layout_constraintRight_toLeftOf="@id/tv_saturday"/>


            <TextView
                android:id="@+id/tv_saturday"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@id/tv_sunday"
                app:layout_constraintLeft_toRightOf="@id/tv_friday"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/lo_calendar_weekdays"
            app:layout_constraintBottom_toTopOf="@id/lo_bottom" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_bottom"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_next"
                android:layout_width="328dp"
                android:layout_height="88dp"
                android:text="다음"
                android:textSize="30sp"
                android:background="@drawable/btn_radius_20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>