<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.betterlife.antifragile.presentation.util.CustomToolbar
            android:id="@+id/lo_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_auth_login"/>

        <LinearLayout
            android:id="@+id/lo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp"
            app:layout_constraintTop_toBottomOf="@id/lo_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="160dp"
                android:layout_height="43dp"
                android:background="@drawable/ic_logo"
                android:contentDescription="@string/antirfagile_logo" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginTop="6dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/lo_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:id="@+id/btn_google_login"
                android:layout_width="328dp"
                android:layout_height="50dp"
                android:contentDescription="@string/google_login"
                android:background="@drawable/btn_google_login"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>