<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_view_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_emoticon_normal">
            <ImageView
                android:id="@+id/iv_emoticon"
                android:layout_width="102dp"
                android:layout_height="101dp"
                android:src="@drawable/emoticon_smile"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_complete"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingVertical="4dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/iv_emoticon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_re_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/re_recommend"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/btn_rectangle_radius_100"
            android:paddingVertical="19dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/lo_view_complete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btn_move_to_select_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_to_select_content"
            android:textSize="16sp"
            android:textColor="@color/main_color"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/btn_rectangle_radius_100_transparent"
            android:paddingVertical="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_re_recommend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btn_move_to_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_to_diary"
            android:textSize="16sp"
            android:textColor="@color/main_color"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/btn_rectangle_radius_100_transparent"
            android:paddingVertical="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_move_to_select_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>