<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lo_diary_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            android:paddingTop="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/create_diary"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:letterSpacing="0.02" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/line"
                android:importantForAccessibility="no" />
            
            <EditText
                android:id="@+id/et_diary_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:hint="@string/edit_box_hint"
                android:textColorHint="@color/hint_text_color"
                android:letterSpacing="0.02"
                android:gravity="top"
                android:scrollbars="vertical"
                android:background="@android:color/transparent"
                android:paddingHorizontal="1dp"
                android:paddingVertical="3dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintTop_toBottomOf="@id/lo_diary_create" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_tip_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="14dp"
            android:layout_marginTop="24dp"
            android:background="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@id/iv_line">

            <TextView
                android:id="@+id/tv_tip_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:text="!"
                android:textSize="8sp"
                android:textColor="@color/gray"
                android:gravity="center"
                android:background="@drawable/shape_circle"
                app:layout_constraintTop_toTopOf="@id/tv_tip_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_tip_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_tip_title"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/text_diary_tip_title"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginStart="10dp"
                android:paddingVertical="4sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_tip_icon" />

            <TextView
                android:id="@+id/tv_tip_content"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/text_diary_tip"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:paddingVertical="4sp"
                app:layout_constraintStart_toStartOf="@id/tv_tip_title"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_title" />

            <TextView
                android:id="@+id/tv_point_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:text="!"
                android:textSize="8sp"
                android:textColor="@color/gray"
                android:gravity="center"
                android:background="@drawable/shape_circle"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toTopOf="@id/tv_point_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_point_title"
                app:layout_constraintStart_toStartOf="@id/tv_tip_icon" />

            <TextView
                android:id="@+id/tv_point_title"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/text_diary_point"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginTop="6dp"
                android:layout_marginStart="10dp"
                android:paddingVertical="4sp"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_content"
                app:layout_constraintStart_toEndOf="@id/tv_point_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="328dp"
            android:layout_height="58dp"
            android:text="작성 완료"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:gravity="center"
            android:background="@drawable/btn_rectangle_radius_100"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/lo_tip_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>